Docked extension and fixed scrollbar-gutter

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  width: 500px;
-  height: 700px;
+  scrollbar-gutter: stable;
 }
 
 button {
